# mcp-vision

./: .gitignore  README.md  config.py  environment.yml  pyproject.toml
phase1_vision/: __init__.py  capture.py  parse_screen.py
phase2_mcp/: __init__.py  server.py  tools.py
phase3_orchestrator/: __init__.py  agent.py  prompts.py
scripts/: check_setup.py  download_weights.py
